May 23, 2003

  * FIXED: More catalog trouble.  Richard O'Keefe.

May 22, 2003

  * FIXED: Lookup of system identifiers through the catalogue (avoid early
    tagging with file:)  Richard O'Keefe.

May 21, 2003

  * FIXED: Handle -- in element-names (Bijan Parsia).

May 8, 2003

  * Fix registering catalog files

May 5, 2003

  * Incorporated better CATALOG parsing by Richard O'Keefe.  May be incomplete
    or incorrect.

* FIXED: call(end, Goal) passing the element-name incorrectly (breaks
  process_rdf/3).

* FIXED: delay unification of value in load_structure/3.

* FIXED: Properly expand UTF-8 values in CDATA attributes

* FIXED: Properly handle unquoted attributes at the end of an empty element
  in XML mode <foo bar=10/>

* FIXED: #CONREF attribute handling in elements with declared content
  (CDATA/RCDATA).  Richard O'Keefe.

SWI-Prolog VERSION 5.0.10
=========================

* FIXED: properly handle elements that have only an <!ATTLIST declaration
  but no <!ELEMENT declaration.  (C. M. Sperberg-McQueen).

* FIXED: handle CDATA inside elements with content-type ANY
  (C. M. Sperberg-McQueen).

* MODIFIED: silently ignore attempts to redefine entity declarations.
  Richard O'Keefe.

* FIXED: skip [] for detection of nesting inside literal values and fix
  handling of [] in the <!DOCTYPE xxx [...]> declaration.  Richard O'Keefe.

* MODIFIED/ADDED: qualify_attributes option for xmlns mode.  Default is
  now *not* to qualify attributes.

* FIXED: Handle elements inside shorttag values.  Thanks Richard O'Keefe
  for providing a clear description how to handle this.

SWI-Prolog VERSION 5.0.9
========================

* FIXED: correct handling of content_length(Len) option (was reading one
  character too many).  Oops, normal reading was broken.  Fixed.

* FIXED: Correctly handle marked sections ending in ]]]> rather than ]]>
  Spotted by Adrian Boyko.

* ADDED: xml_quote_attribute/2 and xml_quote_cdata/2, providing simple
  quote-support.
